--- a/PafClient-2/src/main/resources/templates/Allusers.html
+++ b/PafClient-2/src/main/resources/templates/Allusers.html
@@ -17,15 +17,16 @@ body {font-family: "Lato", sans-serif}
 <!--hide
 
 var password;
-var pass1="123";
+var pass1="111";
 
 password=prompt('Please enter your password to view this page!',' ');
 
-if (password==pass1)
+if (password==pass1){
   alert('Password Correct! Click OK to enter!');
+}
 else
    {
-	window.location="http://localhost:8087/user/error";
+	window.location= "http://localhost:8087/user/error";
     }
 
 //-->
